<resources>
    <string name="app_name">MultiUserLoginApp</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_failed">Login Failed!</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="invalid_credentials">Invalid Credentials</string>
</resources>
